# UBB

./: .gitignore  gitscript  optionale.json
A1/Semestrul 1/ASC/: 0rizare.txt
A1/Semestrul 1/Algebra/: explicatie grup simetric - permutari, ciclu.txt
A1/Semestrul 1/Analiza/: Analiza.url
A1/Semestrul 1/Examen/: auxiliar.txt  exceptii.py  file.txt  main.py  teste.py
A1/Semestrul 1/LC/: 9.2.15.7 Sofran Daniel.pptx  LC Team 217.pptx
A1/Semestrul 2/OOP/: addRepo.pyw
A1/Semestrul 2/OOP/Examen/: CMakeLists.txt  domain.cpp  domain.h  exceptions.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h
A1/Semestrul 2/OOP/Examen/Scris/: CMakeLists.txt  curs14.cpp  curs14v2.cpp  iulie2019mi.cpp  s12.cpp  s14.cpp  s23.cpp  s24.cpp  s32.cpp  s33.cpp  s34.cpp  s3p4.cpp  s53.cpp  s54.cpp  sz1.cpp
A1/Semestrul 2/OOP/Examen/UI/: GUI.cpp  GUI.h  GUITabla.cpp  GUITabla.h  includesQT.h
A1/Semestrul 2/OOP/Examen/model1/: CMakeLists.txt  domain.cpp  domain.h  exceptions.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  tests.h
A1/Semestrul 2/OOP/Examen/model1/GUI/: GUI.cpp  GUI.h  GUIstari.cpp  GUIstari.h  includesQT.h  observer.h
A1/Semestrul 2/OOP/Examen/model2/: CMakeLists.txt  domain.cpp  domain.h  exceptions.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h
A1/Semestrul 2/OOP/Examen/model2/UI/: GUI.cpp  GUI.h  includesQT.h  model.h  observer.h
A1/Semestrul 2/OOP/Examen/model3/: CMakeLists.txt  GUI.cpp  GUI.h  includesQT.h  main.cpp  model.h  observer.h
A1/Semestrul 2/OOP/Examen/model3/CRUD/: domain.cpp  domain.h  exceptions.h  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h
A1/Semestrul 2/OOP/Labs/lab6/: CMakeLists.txt  README.md  domain.cpp  domain.h  exceptions.h  main.cpp  service.cpp  service.h  tests.cpp  tests.h  uiconsole.cpp  uiconsole.h  validator.cpp  validator.h
A1/Semestrul 2/SO/: pb BRAD.SH
A2/Projects/HTML/: 3dloader.html  circle positioning.html  emmbedunity.html  gamebg.html
A2/Projects/MillStrategy/: MillStrategy.sln  mori.txt
A2/Projects/siteReport/: db-old.sqlite3  db.sqlite3  manage.py  runpython
A2/Sem3/Engleza/: english.txt  main ideas.txt  refs.txt
A2/Sem3/MAP/: GrafListeMuchii.java
A2/Sem3/PLF/: Clisp.bat  OpenExcelPLF.pyw
A2/Sem4/AI/: Excel.url
A2/Sem4/English/: todo.txt
A2/Sem4/SGBD/: s5.txt
A3/Sem5/IOC/: Jocul Cuvintelor - v7 full narator on click.sb3  cerinte.txt
A3/Sem5/LFTC/: Site.url
A3/Sem5/LFTC/lab5Clion/: CMakeLists.txt  lex.yy.c  lexicalAnalyzer.l  lexicalAtomTable.cpp  lexicalAtomTable.h
A3/Sem5/LFTC/lab5Clion/resources/: fip.txt  identifiersSymbolTable.txt  input.txt
A3/Sem6/Calcul numeric/: MathWorks.MATLAB.2021b.9.11.0.build.1769968.torrent
A3/Sem6/Istorie/: Personalitati.ppt
A3/Sem6/VVSS/: Diagram.mdj  Quiz.url
Internships/: LinkedIn.bat
Internships/Accesa/: .gitignore
Internships/Accesa/gamifyAPI/: db-present.sqlite3
Internships/BroadridgeCs/: BroadridgeCs.sln
Internships/BroadridgeCs/BroadridgeCs/: Program.cs  Threading.cs
Internships/Messages/: coverletter.txt  deleteaux.sh  genCoverLetter.sh  genHrMessage.sh  hrmessage.txt
project_utils/AtestatVectori/Instalare/: Vectori.application
project_utils/BazedeNumeratie/: Baze de Numerație.sln
project_utils/BazedeNumeratie/Baze de Numerație/: Baze de Numerație.csproj  Cifra.cs  Form1.Designer.cs  Form1.cs  Numar.cs  NumarControl.Designer.cs  NumarControl.cs  Program.cs
project_utils/DevizeBiciclete/DevizeBiciclete/: DevizeBiciclete.csproj  Resource.Designer.cs  seps.txt
project_utils/DevizeBiciclete/DevizeBicicleteTests/: DevizeBicicleteTests.csproj
project_utils/FillAnimation/: Parcela.sln
project_utils/FillAnimation/Parcela/: CodForm.Designer.cs  CodForm.cs  ColorListDialog.Designer.cs  ColorListDialog.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Parcela.csproj  PbDialog.Designer.cs  PbDialog.cs  Program.cs
project_utils/GenericFP/: README.md  console.py  exceptii.py  repository.py  service.py
project_utils/JavaORM/: README.md  SupportedTypes.java
project_utils/JavaORM/orm/: ConnectionManager.java
project_utils/Mills/: Moară.sln
project_utils/Mills/Moară/: Form1.Designer.cs  Form1.cs  Form1.resx  Moară.csproj  Piesa.Designer.cs  Piesa.cs  Program.cs  Tabla.cs
project_utils/Modele-de-cusut/: Modele de cusut.sln
project_utils/Modele-de-cusut/Modele de cusut/: Manager.Designer.cs  Manager.resx  Modele de cusut.csproj  Program.cs  manager.cs
project_utils/Modele-de-cusut/PackingProject/: Package.appxmanifest  PackingProject.wapproj
project_utils/PDFDirect/: PDFDirect.sln
project_utils/PDFDirect/PDFDirect/: Convertor.cs  Form1.Designer.cs  Form1.cs  Form1.resx  PDFDirect.csproj  Program.cs  packages.config
project_utils/PDFtoTXT/: PDFtoTXT.sln
project_utils/PDFtoTXT/PDFtoTXT/: CodeCompiler.cs  Data.cs  Form1.Designer.cs  Form1.cs  Form1.resx  PDFtoTXT.csproj  Program.cs  TextProcessor.cs  TxtGetter.cs
project_utils/Quine-s-Method/: README.md  main.py  monom.py  repo.py  test_monom.py  utils.py
project_utils/RaportAngajati/: Positions.txt  db-old.sqlite3  db.sqlite3  publish help  requirements.txt
project_utils/RaportAngajati/login/: urls.py
project_utils/RaportAngajati/main/: geometry.py  urls.py  views.py
project_utils/RaportAngajati/siteReport/: asgi.py  settings.py  urls.py
project_utils/SpeechRecognition/: SpeechRecognition.sln
(+2999 files in other folders)
